# cpi-reconstruction-tr

./: Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: base_prices.json  base_shares.json  current_prices.json  current_quantities.json  independent_series.json  official_series.json
docs/: api.md  data_sources.md  methodology.md
src/cpi_reconstruction_tr/: __init__.py  pipeline.py
src/cpi_reconstruction_tr/analysis/: comparison.py
src/cpi_reconstruction_tr/basket/: weights.py
src/cpi_reconstruction_tr/data/: ingest.py  sources.py
src/cpi_reconstruction_tr/indices/: calculate.py
src/cpi_reconstruction_tr/processing/: normalize.py
src/cpi_reconstruction_tr/reporting/: plots.py
tests/: test_analysis.py  test_indices.py  test_processing.py  test_reporting.py
