[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpi-reconstruction-tr"
version = "0.1.0"
description = "Independent, reproducible inflation estimation workflows for Türkiye"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CPI Reconstruction TR Contributors" }]
dependencies = []

[project.scripts]
inflation-pipeline = "cpi_reconstruction_tr.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
